--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".session_activity"/>
+        <activity android:name=".trfour"></activity>
+        <activity android:name=".trthree" />
+        <activity android:name=".trtwo" />
+        <activity android:name=".trone" />
+        <activity android:name=".trainerfour" />
+        <activity android:name=".trainerthree" />
+        <activity android:name=".trainertwo" />
+        <activity android:name=".trainerone" />
+        <activity android:name=".exfour" />
+        <activity android:name=".exthree" />
+        <activity android:name=".extwo" />
+        <activity android:name=".exone" />
+        <activity android:name=".intermediate" />
+        <activity android:name=".beginners" />
+        <activity android:name=".session_activity" />
         <activity android:name=".detail_session" />
         <activity android:name=".rec_session" />
         <activity android:name=".adminexersices" />
